--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ jspm_packages
 
 # data
 /data/*
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
