--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.14.0",
     "fortune": "^4.1.9",
     "fortune-json-api": "^2.0.11",
+    "fortune-nedb": "^1.1.3",
     "morgan": "^1.7.0",
     "nedb": "^1.8.0"
   }
