--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Final Project for CPSC-2030-001",
   "main": "app.js",
   "scripts": {
-    "start": "pm2 start process.json && pm2 logs",
+    "start": "pm2-docker start process.json && pm2 logs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,13 +18,14 @@
   },
   "homepage": "https://github.com/aklkv/cpsc-2030-fp#readme",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "cors": "^2.7.1",
-    "express": "^4.14.0",
-    "fortune": "^4.1.9",
-    "fortune-json-api": "^2.0.11",
-    "fortune-nedb": "^1.1.3",
-    "morgan": "^1.7.0",
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "fortune": "^5.2.7",
+    "fortune-http": "^1.0.17",
+    "fortune-json-api": "^2.1.2",
+    "fortune-nedb": "^1.1.5",
+    "morgan": "^1.8.2",
     "nedb": "^1.8.0"
   }
 }
